--- a/src/dawn/tests/BUILD.gn
+++ b/src/dawn/tests/BUILD.gn
@@ -569,6 +569,8 @@ source_set("end2end_tests_sources") {
     "end2end/ShaderF16Tests.cpp",
     "end2end/ShaderTests.cpp",
     "end2end/ShaderValidationTests.cpp",
+    "end2end/SharedTextureMemoryTests.cpp",
+    "end2end/SharedTextureMemoryTests.h",
     "end2end/StorageTextureTests.cpp",
     "end2end/SubresourceRenderAttachmentTests.cpp",
     "end2end/Texture3DTests.cpp",
@@ -605,6 +607,7 @@ source_set("end2end_tests_sources") {
   if (dawn_enable_metal) {
     sources += [
       "end2end/IOSurfaceWrappingTests.cpp",
+      "end2end/SharedTextureMemoryTests_metal.mm",
       "end2end/VideoViewsTests_mac.cpp",
     ]
     frameworks = [ "IOSurface.framework" ]
