[tint] Move FromProgram to wgsl/reader
This belongs inside the wgsl language reader subdirectory.

Bug: tint:1988
Change-Id: I64f19b736323ee8335de4e652e6f63f24410937c

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -1038,6 +1038,7 @@ libtint_source_set("libtint_spv_writer_src") {
       ":libtint_ir_builder_src",
       ":libtint_ir_src",
       ":libtint_ir_transform_src",
+      ":libtint_wgsl_reader_program_to_ir_src",
     ]
   }
 }
@@ -1065,6 +1066,27 @@ libtint_source_set("libtint_wgsl_reader_src") {
     ":libtint_type_src",
     ":libtint_utils_src",
   ]
+}
+
+libtint_source_set("libtint_wgsl_reader_program_to_ir_src") {
+  sources = []
+  deps = []
+
+  if (tint_build_ir) {
+    sources += [
+      "lang/wgsl/reader/program_to_ir/program_to_ir.cc",
+      "lang/wgsl/reader/program_to_ir/program_to_ir.h",
+    ]
+    deps += [
+      ":libtint_ast_src",
+      ":libtint_ir_src",
+      ":libtint_program_src",
+      ":libtint_sem_src",
+      ":libtint_symbols_src",
+      ":libtint_type_src",
+      ":libtint_utils_src",
+    ]
+  }
 }
 
 libtint_source_set("libtint_wgsl_writer_src") {
@@ -1193,8 +1215,6 @@ libtint_source_set("libtint_syntax_tree_writer_src") {
 if (tint_build_ir) {
   libtint_source_set("libtint_ir_builder_src") {
     sources = [
-      "lang/core/ir/from_program.cc",
-      "lang/core/ir/from_program.h",
       "lang/core/ir/to_program.cc",
       "lang/core/ir/to_program.h",
     ]
@@ -2130,6 +2150,33 @@ if (tint_build_unittests) {
     ]
   }
 
+  tint_unittests_source_set("tint_unittests_wgsl_reader_program_to_ir_src") {
+    sources = []
+    deps = []
+
+    if (tint_build_ir) {
+      sources += [
+        "lang/wgsl/reader/program_to_ir/accessor_test.cc",
+        "lang/wgsl/reader/program_to_ir/binary_test.cc",
+        "lang/wgsl/reader/program_to_ir/builtin_test.cc",
+        "lang/wgsl/reader/program_to_ir/call_test.cc",
+        "lang/wgsl/reader/program_to_ir/function_test.cc",
+        "lang/wgsl/reader/program_to_ir/let_test.cc",
+        "lang/wgsl/reader/program_to_ir/literal_test.cc",
+        "lang/wgsl/reader/program_to_ir/materialize_test.cc",
+        "lang/wgsl/reader/program_to_ir/program_to_ir_test.cc",
+        "lang/wgsl/reader/program_to_ir/shadowing_test.cc",
+        "lang/wgsl/reader/program_to_ir/store_test.cc",
+        "lang/wgsl/reader/program_to_ir/unary_test.cc",
+        "lang/wgsl/reader/program_to_ir/var_test.cc",
+      ]
+      deps += [
+        ":libtint_ir_src",
+        ":tint_unittests_ir_src",
+      ]
+    }
+  }
+
   tint_unittests_source_set("tint_unittests_wgsl_writer_src") {
     sources = [
       "lang/wgsl/ast_writer/generator_impl_alias_type_test.cc",
@@ -2365,19 +2412,6 @@ if (tint_build_unittests) {
         "lang/core/ir/exit_if_test.cc",
         "lang/core/ir/exit_loop_test.cc",
         "lang/core/ir/exit_switch_test.cc",
-        "lang/core/ir/from_program_accessor_test.cc",
-        "lang/core/ir/from_program_binary_test.cc",
-        "lang/core/ir/from_program_builtin_test.cc",
-        "lang/core/ir/from_program_call_test.cc",
-        "lang/core/ir/from_program_function_test.cc",
-        "lang/core/ir/from_program_let_test.cc",
-        "lang/core/ir/from_program_literal_test.cc",
-        "lang/core/ir/from_program_materialize_test.cc",
-        "lang/core/ir/from_program_shadowing_test.cc",
-        "lang/core/ir/from_program_store_test.cc",
-        "lang/core/ir/from_program_test.cc",
-        "lang/core/ir/from_program_unary_test.cc",
-        "lang/core/ir/from_program_var_test.cc",
         "lang/core/ir/function_param_test.cc",
         "lang/core/ir/function_test.cc",
         "lang/core/ir/if_test.cc",
@@ -2482,6 +2516,7 @@ if (tint_build_unittests) {
       deps += [
         ":tint_unittests_ir_src",
         ":tint_unittests_ir_transform_src",
+        ":tint_unittests_wgsl_reader_program_to_ir_src",
       ]
     }
 
