--- a/src/tint/CMakeLists.txt
+++ b/src/tint/CMakeLists.txt
@@ -725,10 +725,14 @@ endif()
 
 if(${TINT_BUILD_HLSL_WRITER})
   list(APPEND TINT_LIB_SRCS
-    lang/hlsl/ast_writer/generator.cc
-    lang/hlsl/ast_writer/generator.h
-    lang/hlsl/ast_writer/generator_impl.cc
-    lang/hlsl/ast_writer/generator_impl.h
+    lang/hlsl/writer/options.cc
+    lang/hlsl/writer/options.h
+    lang/hlsl/writer/result.cc
+    lang/hlsl/writer/result.h
+    lang/hlsl/writer/writer.cc
+    lang/hlsl/writer/writer.h
+    lang/hlsl/writer/ast_printer/ast_printer.cc
+    lang/hlsl/writer/ast_printer/ast_printer.h
   )
 endif()
 
@@ -1545,37 +1549,37 @@ if(TINT_BUILD_TESTS)
 
   if (${TINT_BUILD_HLSL_WRITER})
     list(APPEND TINT_TEST_SRCS
-      lang/hlsl/ast_writer/generator_impl_array_accessor_test.cc
-      lang/hlsl/ast_writer/generator_impl_assign_test.cc
-      lang/hlsl/ast_writer/generator_impl_binary_test.cc
-      lang/hlsl/ast_writer/generator_impl_bitcast_test.cc
-      lang/hlsl/ast_writer/generator_impl_block_test.cc
-      lang/hlsl/ast_writer/generator_impl_break_test.cc
-      lang/hlsl/ast_writer/generator_impl_builtin_test.cc
-      lang/hlsl/ast_writer/generator_impl_builtin_texture_test.cc
-      lang/hlsl/ast_writer/generator_impl_call_test.cc
-      lang/hlsl/ast_writer/generator_impl_case_test.cc
-      lang/hlsl/ast_writer/generator_impl_cast_test.cc
-      lang/hlsl/ast_writer/generator_impl_const_assert_test.cc
-      lang/hlsl/ast_writer/generator_impl_constructor_test.cc
-      lang/hlsl/ast_writer/generator_impl_continue_test.cc
-      lang/hlsl/ast_writer/generator_impl_discard_test.cc
-      lang/hlsl/ast_writer/generator_impl_function_test.cc
-      lang/hlsl/ast_writer/generator_impl_identifier_test.cc
-      lang/hlsl/ast_writer/generator_impl_if_test.cc
-      lang/hlsl/ast_writer/generator_impl_import_test.cc
-      lang/hlsl/ast_writer/generator_impl_loop_test.cc
-      lang/hlsl/ast_writer/generator_impl_member_accessor_test.cc
-      lang/hlsl/ast_writer/generator_impl_module_constant_test.cc
-      lang/hlsl/ast_writer/generator_impl_return_test.cc
-      lang/hlsl/ast_writer/generator_impl_sanitizer_test.cc
-      lang/hlsl/ast_writer/generator_impl_switch_test.cc
-      lang/hlsl/ast_writer/generator_impl_test.cc
-      lang/hlsl/ast_writer/generator_impl_type_test.cc
-      lang/hlsl/ast_writer/generator_impl_unary_op_test.cc
-      lang/hlsl/ast_writer/generator_impl_variable_decl_statement_test.cc
-      lang/hlsl/ast_writer/generator_impl_workgroup_var_test.cc
-      lang/hlsl/ast_writer/test_helper.h
+      lang/hlsl/writer/ast_printer/array_accessor_test.cc
+      lang/hlsl/writer/ast_printer/assign_test.cc
+      lang/hlsl/writer/ast_printer/ast_printer_test.cc
+      lang/hlsl/writer/ast_printer/binary_test.cc
+      lang/hlsl/writer/ast_printer/bitcast_test.cc
+      lang/hlsl/writer/ast_printer/block_test.cc
+      lang/hlsl/writer/ast_printer/break_test.cc
+      lang/hlsl/writer/ast_printer/builtin_test.cc
+      lang/hlsl/writer/ast_printer/builtin_texture_test.cc
+      lang/hlsl/writer/ast_printer/call_test.cc
+      lang/hlsl/writer/ast_printer/case_test.cc
+      lang/hlsl/writer/ast_printer/cast_test.cc
+      lang/hlsl/writer/ast_printer/const_assert_test.cc
+      lang/hlsl/writer/ast_printer/constructor_test.cc
+      lang/hlsl/writer/ast_printer/continue_test.cc
+      lang/hlsl/writer/ast_printer/discard_test.cc
+      lang/hlsl/writer/ast_printer/function_test.cc
+      lang/hlsl/writer/ast_printer/identifier_test.cc
+      lang/hlsl/writer/ast_printer/if_test.cc
+      lang/hlsl/writer/ast_printer/import_test.cc
+      lang/hlsl/writer/ast_printer/loop_test.cc
+      lang/hlsl/writer/ast_printer/member_accessor_test.cc
+      lang/hlsl/writer/ast_printer/module_constant_test.cc
+      lang/hlsl/writer/ast_printer/return_test.cc
+      lang/hlsl/writer/ast_printer/sanitizer_test.cc
+      lang/hlsl/writer/ast_printer/switch_test.cc
+      lang/hlsl/writer/ast_printer/type_test.cc
+      lang/hlsl/writer/ast_printer/unary_op_test.cc
+      lang/hlsl/writer/ast_printer/variable_decl_statement_test.cc
+      lang/hlsl/writer/ast_printer/workgroup_var_test.cc
+      lang/hlsl/writer/ast_printer/test_helper.h
     )
   endif()
 
@@ -1720,7 +1724,7 @@ if(TINT_BUILD_BENCHMARKS)
     list(APPEND TINT_BENCHMARK_SRCS lang/glsl/ast_writer/generator_bench.cc)
   endif()
   if (${TINT_BUILD_HLSL_WRITER})
-    list(APPEND TINT_BENCHMARK_SRCS lang/hlsl/ast_writer/generator_bench.cc)
+    list(APPEND TINT_BENCHMARK_SRCS lang/hlsl/writer/writer_bench.cc)
   endif()
   if (${TINT_BUILD_MSL_WRITER})
     list(APPEND TINT_BENCHMARK_SRCS lang/msl/writer/writer_bench.cc)
