--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -1162,12 +1162,15 @@ libtint_source_set("libtint_hlsl_writer_src") {
 
 libtint_source_set("libtint_glsl_writer_src") {
   sources = [
-    "lang/glsl/ast_writer/generator.cc",
-    "lang/glsl/ast_writer/generator.h",
-    "lang/glsl/ast_writer/generator_impl.cc",
-    "lang/glsl/ast_writer/generator_impl.h",
-    "lang/glsl/ast_writer/options.h",
-    "lang/glsl/ast_writer/version.h",
+    "lang/glsl/writer/ast_printer/ast_printer.cc",
+    "lang/glsl/writer/ast_printer/ast_printer.h",
+    "lang/glsl/writer/options.cc",
+    "lang/glsl/writer/options.h",
+    "lang/glsl/writer/result.cc",
+    "lang/glsl/writer/result.h",
+    "lang/glsl/writer/version.h",
+    "lang/glsl/writer/writer.cc",
+    "lang/glsl/writer/writer.h",
   ]
 
   deps = [
@@ -2283,38 +2286,38 @@ if (tint_build_unittests) {
 
   tint_unittests_source_set("tint_unittests_glsl_writer_src") {
     sources = [
-      "lang/glsl/ast_writer/generator_impl_array_accessor_test.cc",
-      "lang/glsl/ast_writer/generator_impl_assign_test.cc",
-      "lang/glsl/ast_writer/generator_impl_binary_test.cc",
-      "lang/glsl/ast_writer/generator_impl_bitcast_test.cc",
-      "lang/glsl/ast_writer/generator_impl_block_test.cc",
-      "lang/glsl/ast_writer/generator_impl_break_test.cc",
-      "lang/glsl/ast_writer/generator_impl_builtin_test.cc",
-      "lang/glsl/ast_writer/generator_impl_builtin_texture_test.cc",
-      "lang/glsl/ast_writer/generator_impl_call_test.cc",
-      "lang/glsl/ast_writer/generator_impl_case_test.cc",
-      "lang/glsl/ast_writer/generator_impl_cast_test.cc",
-      "lang/glsl/ast_writer/generator_impl_constructor_test.cc",
-      "lang/glsl/ast_writer/generator_impl_continue_test.cc",
-      "lang/glsl/ast_writer/generator_impl_discard_test.cc",
-      "lang/glsl/ast_writer/generator_impl_function_test.cc",
-      "lang/glsl/ast_writer/generator_impl_identifier_test.cc",
-      "lang/glsl/ast_writer/generator_impl_if_test.cc",
-      "lang/glsl/ast_writer/generator_impl_import_test.cc",
-      "lang/glsl/ast_writer/generator_impl_loop_test.cc",
-      "lang/glsl/ast_writer/generator_impl_member_accessor_test.cc",
-      "lang/glsl/ast_writer/generator_impl_module_constant_test.cc",
-      "lang/glsl/ast_writer/generator_impl_return_test.cc",
-      "lang/glsl/ast_writer/generator_impl_sanitizer_test.cc",
-      "lang/glsl/ast_writer/generator_impl_storage_buffer_test.cc",
-      "lang/glsl/ast_writer/generator_impl_switch_test.cc",
-      "lang/glsl/ast_writer/generator_impl_test.cc",
-      "lang/glsl/ast_writer/generator_impl_type_test.cc",
-      "lang/glsl/ast_writer/generator_impl_unary_op_test.cc",
-      "lang/glsl/ast_writer/generator_impl_uniform_buffer_test.cc",
-      "lang/glsl/ast_writer/generator_impl_variable_decl_statement_test.cc",
-      "lang/glsl/ast_writer/generator_impl_workgroup_var_test.cc",
-      "lang/glsl/ast_writer/test_helper.h",
+      "lang/glsl/writer/ast_printer/array_accessor_test.cc",
+      "lang/glsl/writer/ast_printer/assign_test.cc",
+      "lang/glsl/writer/ast_printer/ast_printer_test.cc",
+      "lang/glsl/writer/ast_printer/binary_test.cc",
+      "lang/glsl/writer/ast_printer/bitcast_test.cc",
+      "lang/glsl/writer/ast_printer/block_test.cc",
+      "lang/glsl/writer/ast_printer/break_test.cc",
+      "lang/glsl/writer/ast_printer/builtin_test.cc",
+      "lang/glsl/writer/ast_printer/builtin_texture_test.cc",
+      "lang/glsl/writer/ast_printer/call_test.cc",
+      "lang/glsl/writer/ast_printer/case_test.cc",
+      "lang/glsl/writer/ast_printer/cast_test.cc",
+      "lang/glsl/writer/ast_printer/constructor_test.cc",
+      "lang/glsl/writer/ast_printer/continue_test.cc",
+      "lang/glsl/writer/ast_printer/discard_test.cc",
+      "lang/glsl/writer/ast_printer/function_test.cc",
+      "lang/glsl/writer/ast_printer/identifier_test.cc",
+      "lang/glsl/writer/ast_printer/if_test.cc",
+      "lang/glsl/writer/ast_printer/import_test.cc",
+      "lang/glsl/writer/ast_printer/loop_test.cc",
+      "lang/glsl/writer/ast_printer/member_accessor_test.cc",
+      "lang/glsl/writer/ast_printer/module_constant_test.cc",
+      "lang/glsl/writer/ast_printer/return_test.cc",
+      "lang/glsl/writer/ast_printer/sanitizer_test.cc",
+      "lang/glsl/writer/ast_printer/storage_buffer_test.cc",
+      "lang/glsl/writer/ast_printer/switch_test.cc",
+      "lang/glsl/writer/ast_printer/test_helper.h",
+      "lang/glsl/writer/ast_printer/type_test.cc",
+      "lang/glsl/writer/ast_printer/unary_op_test.cc",
+      "lang/glsl/writer/ast_printer/uniform_buffer_test.cc",
+      "lang/glsl/writer/ast_printer/variable_decl_statement_test.cc",
+      "lang/glsl/writer/ast_printer/workgroup_var_test.cc",
     ]
 
     deps = [
