--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -1215,6 +1215,7 @@ if (tint_build_ir) {
       ":libtint_builtins_src",
       ":libtint_constant_src",
       ":libtint_ir_src",
+      ":libtint_ir_transform_src",
       ":libtint_program_src",
       ":libtint_sem_src",
       ":libtint_symbols_src",
@@ -2189,7 +2190,9 @@ if (tint_build_unittests) {
     sources = [
       "lang/msl/writer/ast_printer/array_accessor_test.cc",
       "lang/msl/writer/ast_printer/assign_test.cc",
+      "lang/msl/writer/ast_printer/ast_function_test.cc",
       "lang/msl/writer/ast_printer/ast_printer_test.cc",
+      "lang/msl/writer/ast_printer/ast_type_test.cc",
       "lang/msl/writer/ast_printer/binary_test.cc",
       "lang/msl/writer/ast_printer/bitcast_test.cc",
       "lang/msl/writer/ast_printer/block_test.cc",
@@ -2203,7 +2206,6 @@ if (tint_build_unittests) {
       "lang/msl/writer/ast_printer/constructor_test.cc",
       "lang/msl/writer/ast_printer/continue_test.cc",
       "lang/msl/writer/ast_printer/discard_test.cc",
-      "lang/msl/writer/ast_printer/function_test.cc",
       "lang/msl/writer/ast_printer/identifier_test.cc",
       "lang/msl/writer/ast_printer/if_test.cc",
       "lang/msl/writer/ast_printer/import_test.cc",
@@ -2214,7 +2216,6 @@ if (tint_build_unittests) {
       "lang/msl/writer/ast_printer/sanitizer_test.cc",
       "lang/msl/writer/ast_printer/switch_test.cc",
       "lang/msl/writer/ast_printer/test_helper.h",
-      "lang/msl/writer/ast_printer/type_test.cc",
       "lang/msl/writer/ast_printer/unary_op_test.cc",
       "lang/msl/writer/ast_printer/variable_decl_statement_test.cc",
       "lang/msl/writer/printer_support_test.cc",
