--- a/src/dawn/native/CMakeLists.txt
+++ b/src/dawn/native/CMakeLists.txt
@@ -616,6 +616,7 @@ if (DAWN_ENABLE_VULKAN)
         "vulkan/PipelineCacheVk.h"
         "vulkan/PipelineLayoutVk.cpp"
         "vulkan/PipelineLayoutVk.h"
+        "vulkan/RefCountedVkHandle.h"
         "vulkan/QuerySetVk.cpp"
         "vulkan/QuerySetVk.h"
         "vulkan/QueueVk.cpp"
