Introduces a proxy-ing mechanism and const-ifies Texture members.
Bug: dawn:1662
Change-Id: Ic7f001cfb51fb5c34e128031f8fef7c25911d276

--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -247,6 +247,7 @@ source_set("sources") {
     "ComputePassEncoder.h",
     "ComputePipeline.cpp",
     "ComputePipeline.h",
+    "ConstContent.h",
     "CopyTextureForBrowserHelper.cpp",
     "CopyTextureForBrowserHelper.h",
     "CreatePipelineAsyncTask.cpp",
