--- a/src/dawn/tests/BUILD.gn
+++ b/src/dawn/tests/BUILD.gn
@@ -503,6 +503,8 @@ source_set("end2end_tests_sources") {
     "end2end/AdapterCreationTests.cpp",
     "end2end/BasicTests.cpp",
     "end2end/BindGroupTests.cpp",
+    "end2end/BufferHostMappedPointerTests.cpp",
+    "end2end/BufferHostMappedPointerTests.h",
     "end2end/BufferTests.cpp",
     "end2end/BufferZeroInitTests.cpp",
     "end2end/ClipSpaceTests.cpp",
@@ -615,7 +617,10 @@ source_set("end2end_tests_sources") {
         "end2end/VideoViewsTests_mac.cpp",
       ]
     }
-    sources += [ "end2end/SharedTextureMemoryTests_apple.mm" ]
+    sources += [
+      "end2end/BufferHostMappedPointerTests_apple.mm",
+      "end2end/SharedTextureMemoryTests_apple.mm",
+    ]
 
     frameworks = [ "IOSurface.framework" ]
 
@@ -623,6 +628,10 @@ source_set("end2end_tests_sources") {
         []) {
       configs -= [ "//build/config/compiler:enable_arc" ]
     }
+  }
+
+  if (is_mac || is_ios || is_linux) {
+    sources += [ "end2end/BufferHostMappedPointerTests_posix.cpp" ]
   }
 
   if (dawn_supports_glfw_for_windowing) {
