--- a/scripts/dawn_features.gni
+++ b/scripts/dawn_features.gni
@@ -39,7 +39,7 @@ declare_args() {
   # libGLESv2.so, apparently without regard for the use_static_angle=true
   # GN variable. Chromium's linker on Android disallows production of more
   # than one shared object per target (?).
-  dawn_use_angle = !is_android
+  dawn_use_angle = !is_android || is_component_build
 
   # Enables SwiftShader as the fallback adapter. Requires dawn_swiftshader_dir
   # to be set to take effect.
@@ -84,7 +84,8 @@ declare_args() {
   # (WebGPU/Compat subset)
   # Disables OpenGLES when compiling for UWP, since UWP only supports d3d
   dawn_enable_opengles =
-      (is_linux && !is_chromeos) || (is_win && !dawn_is_winuwp)
+      (is_linux && !is_chromeos) || (is_win && !dawn_is_winuwp) ||
+      (is_android && dawn_use_angle)
 
   # Enables the compilation of Dawn's Vulkan backend
   # Disables vulkan when compiling for UWP, since UWP only supports d3d
