Only build ANGLE in Dawn standalone builds.
Chrome doesn't need (and shouldn't have) ANGLE dlls built by Dawn.

Bug: chromium:1453445
Change-Id: Icb465f23dfb3951fa9512014b0a62d95fc6e5af7

--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -857,7 +857,7 @@ source_set("sources") {
     }
   }
 
-  if (use_angle) {
+  if (use_angle && dawn_standalone) {
     data_deps += [
       "${dawn_angle_dir}:libEGL",
       "${dawn_angle_dir}:libGLESv2",
